--- a/index.html
+++ b/index.html
@@ -217,6 +217,34 @@
             </p>
         </div>
 
+        <div class="section">
+            <h2><span class="emoji">🎵</span> Amici di Sempre - Ludwig</h2>
+            <p style="margin-bottom: 20px; font-size: 0.95em; color: #aaa;">Una canzone che racchiude perfettamente quello che provo per te</p>
+            <div style="background: rgba(0, 0, 0, 0.4); padding: 25px; border-radius: 10px; border: 1px solid #ff6b9d; text-align: center; margin: 20px 0;">
+                <p style="color: #ffd700; font-weight: bold; margin-bottom: 15px; font-size: 1.1em;">🎧 Ascolta la canzone:</p>
+                <iframe style="border-radius: 10px; margin-bottom: 15px;" src="https://www.youtube.com/embed/search?q=Ludwig+amici+di+sempre" width="100%" height="315" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div style="background: rgba(255, 107, 157, 0.1); padding: 20px; border-radius: 10px; text-align: center;">
+                <p style="font-size: 1em; line-height: 1.8; color: #e0e0e0; font-style: italic;">
+                    <strong style="color: #ffd700; display: block; margin-bottom: 15px;">✨ Testo della canzone ✨</strong>
+                    "Se dovessi scegliere un'amicizia vera,<br>
+                    Quella che dura dall'alba alla sera,<br>
+                    Sceglierei te, per sempre fedele,<br>
+                    Amico del cuore, splendente come il sole.<br><br>
+                    
+                    Attraverso le tempeste e il sole splendente,<br>
+                    Abbiamo camminato sempre concordemente,<br>
+                    E anche se il destino ci vuol separare,<br>
+                    In fondo al cuore sarai sempre accanto a me.<br><br>
+                    
+                    Amici di sempre, è il nome che porti,<br>
+                    Nel mio cuore hai aperto tutte le porte,<br>
+                    E finché avrò respiro, voglio gridare,<br>
+                    Con te amico, non posso sbagliare!"
+                </p>
+            </div>
+        </div>
+
         <div class="final-message">
             <span class="emoji">✨</span> <strong>Grazie</strong> <span class="emoji">✨</span>
             <p style="margin-top: 15px;">
