--- a/index.html
+++ b/index.html
@@ -174,6 +174,20 @@
         </div>
 
         <div class="section">
+            <h2><span class="emoji">🔥⚡</span> Naruto e Sasuke</h2>
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin: 25px 0; align-items: center;">
+                <div style="text-align: center;">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKr4bCRuXJqYBeVSDy6XKN7OS9d3SXjHHshQ&s" alt="Naruto" style="max-width: 100%; height: auto; border-radius: 15px; border: 3px solid #ff6b9d; box-shadow: 0 5px 20px rgba(255, 107, 157, 0.4); transition: transform 0.3s;">
+                    <p style="margin-top: 10px; color: #ffd700; font-weight: bold; font-size: 1.1em;">🔥 Naruto</p>
+                </div>
+                <div style="text-align: center;">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSnhv1rQpJ7_eZc2HsgLe6vHNQ_pSTHzfxQfw&s" alt="Sasuke" style="max-width: 100%; height: auto; border-radius: 15px; border: 3px solid #4a4a7a; box-shadow: 0 5px 20px rgba(74, 74, 122, 0.4); transition: transform 0.3s;">
+                    <p style="margin-top: 10px; color: #ffd700; font-weight: bold; font-size: 1.1em;">⚡ Sasuke</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="section">
             <h2><span class="emoji">🌟</span> Cos'è la vera amicizia?</h2>
             <p>
                 Come Naruto e Sasuke, a volte la nostra amicizia è stata messa alla prova, ma ciò che conta è
