--- a/index.html
+++ b/index.html
@@ -13,24 +13,121 @@
 
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #1a1a2e 0%, #16213e 50%, #0f3460 100%);
+            background: linear-gradient(135deg, #FF6B35 0%, #004E89 25%, #1A1A2E 50%, #FF6B35 75%, #004E89 100%);
+            background-size: 400% 400%;
+            animation: gradientShift 15s ease infinite;
             color: #fff;
             min-height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
             padding: 20px;
+            position: relative;
+            overflow: hidden;
+        }
+
+        @keyframes gradientShift {
+            0% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+            100% {
+                background-position: 0% 50%;
+            }
+        }
+
+        /* Kunai animati */
+        .kunai {
+            position: fixed;
+            pointer-events: none;
+            opacity: 0.3;
+            font-size: 2em;
+        }
+
+        .kunai-1 {
+            top: 10%;
+            left: 5%;
+            animation: floatKunai1 20s ease-in-out infinite;
+        }
+
+        .kunai-2 {
+            top: 20%;
+            right: 8%;
+            animation: floatKunai2 25s ease-in-out infinite;
+            transform: rotate(45deg);
+        }
+
+        .kunai-3 {
+            top: 40%;
+            left: 10%;
+            animation: floatKunai3 22s ease-in-out infinite;
+            transform: rotate(-30deg);
+        }
+
+        .kunai-4 {
+            top: 60%;
+            right: 5%;
+            animation: floatKunai4 23s ease-in-out infinite;
+            transform: rotate(60deg);
+        }
+
+        .kunai-5 {
+            top: 75%;
+            left: 8%;
+            animation: floatKunai5 21s ease-in-out infinite;
+            transform: rotate(-45deg);
+        }
+
+        .kunai-6 {
+            top: 30%;
+            right: 15%;
+            animation: floatKunai6 24s ease-in-out infinite;
+        }
+
+        @keyframes floatKunai1 {
+            0%, 100% { transform: translateY(0px) rotate(0deg); opacity: 0.2; }
+            50% { transform: translateY(-50px) rotate(180deg); opacity: 0.5; }
+        }
+
+        @keyframes floatKunai2 {
+            0%, 100% { transform: translateY(0px) rotate(45deg); opacity: 0.3; }
+            50% { transform: translateY(-60px) rotate(225deg); opacity: 0.5; }
+        }
+
+        @keyframes floatKunai3 {
+            0%, 100% { transform: translateY(0px) rotate(-30deg); opacity: 0.2; }
+            50% { transform: translateY(-40px) rotate(150deg); opacity: 0.4; }
+        }
+
+        @keyframes floatKunai4 {
+            0%, 100% { transform: translateY(0px) rotate(60deg); opacity: 0.3; }
+            50% { transform: translateY(-55px) rotate(240deg); opacity: 0.5; }
+        }
+
+        @keyframes floatKunai5 {
+            0%, 100% { transform: translateY(0px) rotate(-45deg); opacity: 0.2; }
+            50% { transform: translateY(-45px) rotate(135deg); opacity: 0.4; }
+        }
+
+        @keyframes floatKunai6 {
+            0%, 100% { transform: translateY(0px) rotate(0deg); opacity: 0.25; }
+            50% { transform: translateY(-50px) rotate(180deg); opacity: 0.45; }
         }
 
         .container {
             max-width: 800px;
-            background: rgba(0, 0, 0, 0.3);
-            border: 2px solid #ff6b9d;
+            background: rgba(0, 0, 0, 0.5);
+            border: 3px solid;
+            border-image: linear-gradient(135deg, #FF6B35, #004E89) 1;
             border-radius: 20px;
             padding: 40px;
-            box-shadow: 0 8px 32px rgba(255, 107, 157, 0.3);
+            box-shadow: 0 8px 32px rgba(255, 107, 157, 0.3), inset 0 0 20px rgba(255, 107, 35, 0.1);
             backdrop-filter: blur(10px);
             text-align: center;
+            position: relative;
+            z-index: 10;
         }
 
         .header {
@@ -40,23 +137,26 @@
         h1 {
             font-size: 2.5em;
             margin-bottom: 10px;
-            color: #ff6b9d;
-            text-shadow: 0 0 10px rgba(255, 107, 157, 0.5);
+            background: linear-gradient(135deg, #FF6B35, #FFA500);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            text-shadow: none;
             animation: glow 2s ease-in-out infinite;
         }
 
         @keyframes glow {
             0%, 100% {
-                text-shadow: 0 0 10px rgba(255, 107, 157, 0.5);
+                filter: drop-shadow(0 0 10px rgba(255, 107, 53, 0.5));
             }
             50% {
-                text-shadow: 0 0 20px rgba(255, 107, 157, 0.8), 0 0 30px rgba(255, 107, 157, 0.6);
+                filter: drop-shadow(0 0 20px rgba(255, 107, 53, 0.8)) drop-shadow(0 0 10px rgba(0, 78, 137, 0.5));
             }
         }
 
         .subtitle {
             font-size: 1.3em;
-            color: #ffd700;
+            color: #FFA500;
             margin-bottom: 5px;
             font-style: italic;
         }
@@ -64,14 +164,14 @@
         .divider {
             width: 100px;
             height: 3px;
-            background: linear-gradient(to right, #ff6b9d, #ffd700, #ff6b9d);
+            background: linear-gradient(to right, #FF6B35, #FFA500, #004E89);
             margin: 20px auto;
             border-radius: 2px;
         }
 
         .quote-naruto {
-            background: rgba(255, 107, 157, 0.2);
-            border-left: 5px solid #ff6b9d;
+            background: rgba(255, 107, 53, 0.2);
+            border-left: 5px solid #FF6B35;
             padding: 20px;
             margin: 25px 0;
             border-radius: 10px;
@@ -81,8 +181,8 @@
         }
 
         .quote-sasuke {
-            background: rgba(70, 70, 100, 0.2);
-            border-left: 5px solid #4a4a7a;
+            background: rgba(0, 78, 137, 0.2);
+            border-left: 5px solid #004E89;
             padding: 20px;
             margin: 25px 0;
             border-radius: 10px;
@@ -98,7 +198,10 @@
 
         .section h2 {
             font-size: 1.8em;
-            color: #ffd700;
+            background: linear-gradient(135deg, #FFA500, #FF6B35, #004E89);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
             margin-bottom: 15px;
             text-align: center;
         }
@@ -117,8 +220,8 @@
         }
 
         .value-box {
-            background: rgba(255, 107, 157, 0.15);
-            border: 2px solid #ff6b9d;
+            background: rgba(255, 107, 53, 0.15);
+            border: 2px solid #FF6B35;
             padding: 20px;
             border-radius: 10px;
             transition: transform 0.3s ease;
@@ -126,20 +229,20 @@
 
         .value-box:hover {
             transform: translateY(-5px);
-            background: rgba(255, 107, 157, 0.25);
-            box-shadow: 0 5px 20px rgba(255, 107, 157, 0.4);
+            background: rgba(255, 107, 53, 0.25);
+            box-shadow: 0 5px 20px rgba(255, 107, 53, 0.4);
         }
 
         .value-box strong {
-            color: #ffd700;
+            color: #FFA500;
             font-size: 1.2em;
             display: block;
             margin-bottom: 8px;
         }
 
         .final-message {
-            background: linear-gradient(135deg, rgba(255, 107, 157, 0.3), rgba(255, 215, 0, 0.2));
-            border: 2px solid #ffd700;
+            background: linear-gradient(135deg, rgba(255, 107, 53, 0.3), rgba(0, 78, 137, 0.2));
+            border: 2px solid #FFA500;
             padding: 25px;
             border-radius: 15px;
             margin-top: 30px;
@@ -161,6 +264,14 @@
     </style>
 </head>
 <body>
+    <!-- Kunai decorativi che fluttuano -->
+    <div class="kunai kunai-1">⚡</div>
+    <div class="kunai kunai-2">⚡</div>
+    <div class="kunai kunai-3">⚡</div>
+    <div class="kunai kunai-4">⚡</div>
+    <div class="kunai kunai-5">⚡</div>
+    <div class="kunai kunai-6">⚡</div>
+
     <div class="container">
         <div class="header">
             <h1><span class="emoji">🔥</span> Il Mio Migliore Amico <span class="emoji">⚡</span></h1>
@@ -170,19 +281,19 @@
 
         <div class="quote-naruto">
             <span class="emoji">👨</span> "Un amico vero è come un sole che continua a brillare anche quando ti trovi nell'oscurità"
-            <br><strong style="display: block; margin-top: 10px; color: #ff9500;">- Naruto Uzumaki</strong>
+            <br><strong style="display: block; margin-top: 10px; color: #FF6B35;">- Naruto Uzumaki</strong>
         </div>
 
         <div class="section">
             <h2><span class="emoji">🔥⚡</span> Naruto e Sasuke</h2>
             <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin: 25px 0; align-items: center;">
                 <div style="text-align: center;">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKr4bCRuXJqYBeVSDy6XKN7OS9d3SXjHHshQ&s" alt="Naruto" style="max-width: 100%; height: auto; border-radius: 15px; border: 3px solid #ff6b9d; box-shadow: 0 5px 20px rgba(255, 107, 157, 0.4); transition: transform 0.3s;">
-                    <p style="margin-top: 10px; color: #ffd700; font-weight: bold; font-size: 1.1em;">🔥 Naruto</p>
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKr4bCRuXJqYBeVSDy6XKN7OS9d3SXjHHshQ&s" alt="Naruto" style="max-width: 100%; height: auto; border-radius: 15px; border: 3px solid #FF6B35; box-shadow: 0 5px 20px rgba(255, 107, 53, 0.4); transition: transform 0.3s;">
+                    <p style="margin-top: 10px; color: #FFA500; font-weight: bold; font-size: 1.1em;">🔥 Naruto</p>
                 </div>
                 <div style="text-align: center;">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSnhv1rQpJ7_eZc2HsgLe6vHNQ_pSTHzfxQfw&s" alt="Sasuke" style="max-width: 100%; height: auto; border-radius: 15px; border: 3px solid #4a4a7a; box-shadow: 0 5px 20px rgba(74, 74, 122, 0.4); transition: transform 0.3s;">
-                    <p style="margin-top: 10px; color: #ffd700; font-weight: bold; font-size: 1.1em;">⚡ Sasuke</p>
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSnhv1rQpJ7_eZc2HsgLe6vHNQ_pSTHzfxQfw&s" alt="Sasuke" style="max-width: 100%; height: auto; border-radius: 15px; border: 3px solid #004E89; box-shadow: 0 5px 20px rgba(0, 78, 137, 0.4); transition: transform 0.3s;">
+                    <p style="margin-top: 10px; color: #004E89; font-weight: bold; font-size: 1.1em;">⚡ Sasuke</p>
                 </div>
             </div>
         </div>
@@ -219,7 +330,7 @@
             <span class="emoji">⚫</span> "Non esiste alcun resentimento in ciò che dico. Questo è semplicemente la conclusione.
             Ma da qualche parte, probabilmente nelle parole, o nei gesti, o forse nella lotta stessa,
             la verità del nostro rapporto si riflette."
-            <br><strong style="display: block; margin-top: 10px; color: #4a4a7a;">- Sasuke Uchiha</strong>
+            <br><strong style="display: block; margin-top: 10px; color: #004E89;">- Sasuke Uchiha</strong>
         </div>
 
         <div class="section">
@@ -234,7 +345,7 @@
         <div class="section">
             <h2><span class="emoji">🎵</span> Amici di Sempre - Ludwig</h2>
             <p style="margin-bottom: 20px; font-size: 0.95em; color: #aaa;">Una canzone che racchiude perfettamente quello che provo per te</p>
-            <div style="background: rgba(0, 0, 0, 0.4); padding: 20px; border-radius: 10px; border: 1px solid #ff6b9d; text-align: center; margin: 20px 0; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
+            <div style="background: rgba(0, 0, 0, 0.4); padding: 20px; border-radius: 10px; border: 1px solid #FF6B35; text-align: center; margin: 20px 0; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
                 <a href="https://open.spotify.com/search/Ludwig%20amici%20di%20sempre" target="_blank" style="display: inline-flex; align-items: center; gap: 10px; background: linear-gradient(135deg, #1DB954, #1ed760); padding: 12px 25px; border-radius: 25px; text-decoration: none; color: white; font-weight: bold; transition: transform 0.3s, box-shadow 0.3s; box-shadow: 0 4px 15px rgba(29, 185, 84, 0.3);">
                     <span style="font-size: 1.3em;">🎧</span> Ascolta su Spotify
                 </a>
@@ -242,9 +353,9 @@
                     <span style="font-size: 1.3em;">▶️</span> Guarda su YouTube
                 </a>
             </div>
-            <div style="background: rgba(255, 107, 157, 0.1); padding: 20px; border-radius: 10px; text-align: left;">
+            <div style="background: rgba(255, 107, 53, 0.1); padding: 20px; border-radius: 10px; text-align: left;">
                 <p style="font-size: 0.95em; line-height: 1.8; color: #e0e0e0; font-style: italic;">
-                    <strong style="color: #ffd700; display: block; margin-bottom: 15px; text-align: center;">✨ Testo della canzone ✨</strong>
+                    <strong style="color: #FFA500; display: block; margin-bottom: 15px; text-align: center;">✨ Testo della canzone ✨</strong>
                     Ricordo quel giorno all'uscita di scuola<br>
                     Eravamo seduti<br>
                     Non c'era il vino, ma una lattina di coca cola<br><br>
@@ -254,7 +365,7 @@
                     Scappavamo alla legge lo sai<br>
                     Quanti sogni, quanti guai<br><br>
                     
-                    <strong style="color: #ffd700; font-size: 1.1em;">Siamo gli amici di sempre, di sempre<br>
+                    <strong style="color: #FFA500; font-size: 1.1em;">Siamo gli amici di sempre, di sempre<br>
                     Il resto non conta niente, ma niente<br>
                     Un vero amico non mente, non mente<br>
                     Un vero amico è per sempre, per sempre.</strong>
@@ -269,7 +380,7 @@
                 Come Naruto e Sasuke, la nostra amicizia è leggendaria. Non importa quanto strada
                 percorriamo separatamente, saprò sempre dove trovarti quando avrò bisogno di te.
             </p>
-            <p style="margin-top: 15px; color: #ffd700; font-weight: bold;">
+            <p style="margin-top: 15px; color: #FFA500; font-weight: bold;">
                 "<em>Non siamo soli finché ci abbiamo l'uno l'altro</em>"
             </p>
         </div>
