--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
             align-items: center;
             padding: 20px;
             position: relative;
-            overflow: hidden;
         }
 
         body::before {
@@ -35,34 +34,19 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(135deg, rgba(255, 107, 53, 0.4) 0%, rgba(0, 78, 137, 0.4) 50%, rgba(255, 107, 53, 0.4) 100%);
-            background-size: 400% 400%;
-            animation: gradientShift 15s ease infinite;
+            background: linear-gradient(135deg, rgba(255, 107, 53, 0.3) 0%, rgba(0, 78, 137, 0.3) 50%, rgba(255, 107, 53, 0.3) 100%);
             pointer-events: none;
             z-index: 1;
         }
 
-        @keyframes gradientShift {
-            0% {
-                background-position: 0% 50%;
-            }
-            50% {
-                background-position: 100% 50%;
-            }
-            100% {
-                background-position: 0% 50%;
-            }
-        }
-
         .container {
             max-width: 800px;
-            background: rgba(0, 0, 0, 0.6);
+            background: rgba(0, 0, 0, 0.7);
             border: 3px solid;
             border-image: linear-gradient(135deg, #FF6B35, #004E89) 1;
             border-radius: 20px;
             padding: 40px;
-            box-shadow: 0 8px 32px rgba(255, 107, 53, 0.3), inset 0 0 20px rgba(255, 107, 35, 0.1);
-            backdrop-filter: blur(10px);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.5);
             text-align: center;
             position: relative;
             z-index: 20;
@@ -85,10 +69,10 @@
 
         @keyframes glow {
             0%, 100% {
-                filter: drop-shadow(0 0 10px rgba(255, 107, 53, 0.5));
+                filter: drop-shadow(0 0 8px rgba(255, 107, 53, 0.6));
             }
             50% {
-                filter: drop-shadow(0 0 20px rgba(255, 107, 53, 0.8)) drop-shadow(0 0 10px rgba(0, 78, 137, 0.5));
+                filter: drop-shadow(0 0 12px rgba(255, 107, 53, 0.9));
             }
         }
 
